--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 
 site_name: MyMoney.Net
 site_url: https://clovett.github.io/MyMoney.Net/
+# site_url:  http://127.0.0.1:8000
 
 theme:
     name: null
