--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,8 +44,8 @@ markdown_extensions:
 
 nav:
   - Home: index.md
-  - Install: install.md
   - Basics:
+    - Install: Basics/install.md
     - Setup: Basics/Setup.md
     - Categories: Basics/Categories.md
     - Payees: Basics/Payees.md
@@ -65,6 +65,7 @@ nav:
     - Attachments: Basics/Attachments.md
     - Auto Categorization: Basics/AutoCategorization.md
     - Sample Data: Basics/SampleData.md
+    - Updates: Basics/Updates.md
 
   - Accounts:
     - Creating Accounts: Accounts/SetupAccounts.md
@@ -98,7 +99,5 @@ nav:
     - W2 Report: Reports/W2Report.md
     - Unaccepted Report: Reports/UnacceptedReport.md
 
-  - install: install.md
-  - Updates: Updates.md
   - Development:
     - Overview: dev/index.md
