--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -4,8 +4,8 @@
 name: Publish Docs
 on:
   push:
-    branches: [ main ]
-    
+    branches: [ master ]
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
@@ -18,7 +18,7 @@ jobs:
         run: |
           pip install mkdocs
           pip install mkdocs-macros-plugin
-      - name: MkDocs build 
+      - name: MkDocs build
         run: mkdocs build
-      - name: MkDocs deploy 
+      - name: MkDocs deploy
         run: mkdocs gh-deploy --force
