--- a/Source/WPF/Tests/Tests.csproj
+++ b/Source/WPF/Tests/Tests.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Wrappers\MainWindowWrapper.cs" />
     <Compile Include="Wrappers\MessageBox.cs" />
     <Compile Include="Wrappers\TrendChartWrapper.cs" />
+    <Compile Include="Wrappers\QuickFilterWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyMoney\MyMoney.csproj">
