--- a/Source/WPF/MyMoney/MyMoney.csproj
+++ b/Source/WPF/MyMoney/MyMoney.csproj
@@ -161,6 +161,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Attachments\StatementManager.cs" />
     <Compile Include="Charts\AnimatingBarChart.xaml.cs">
       <DependentUpon>AnimatingBarChart.xaml</DependentUpon>
     </Compile>
@@ -232,6 +233,7 @@
     <Compile Include="Utilities\DelayedAction.cs" />
     <Compile Include="Utilities\ExponentialDoubleAnimation.cs" />
     <Compile Include="Utilities\FileHash.cs" />
+    <Compile Include="Utilities\FileHelpers.cs" />
     <Compile Include="Utilities\KNearestNeighbor.cs" />
     <Compile Include="Utilities\PointCollectionAnimation.cs" />
     <Compile Include="Utilities\QuickFilterParser.cs" />
