--- a/Source/WPF/UnitTests/UnitTests.csproj
+++ b/Source/WPF/UnitTests/UnitTests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DataTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlMappingTests.cs" />
+    <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
