--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,6 +72,7 @@ nav:
     - Online Security: Accounts/OnlineSecurity.md
     - Account Aliases: Accounts/AccountAliases.md
     - Balancing Accounts: Accounts/BalancingAccounts.md
+    - Statements: Accounts/Statements.md
     - Stock Quote Services: Accounts/StockQuoteServices.md
     - Assets: Accounts/Assets.md
     - Cost Basis: Accounts/CostBasis.md
