fix the click through to Portfolio Report so it remembers the date and uses the historical stock quote closing price for that date if available.

--- a/Source/WPF/MyMoney/MyMoney.csproj
+++ b/Source/WPF/MyMoney/MyMoney.csproj
@@ -224,6 +224,7 @@
     <Compile Include="StockQuotes\AlphaVantage.cs" />
     <Compile Include="StockQuotes\IEXCloud.cs" />
     <Compile Include="StockQuotes\IStockQuoteService.cs" />
+    <Compile Include="StockQuotes\StockQuoteCache.cs" />
     <Compile Include="StockQuotes\StockQuoteThrottle.cs" />
     <Compile Include="Utilities\AnimatedMessage.cs" />
     <Compile Include="Utilities\AppTheme.cs" />
