--- a/Source/WPF/UnitTests/UnitTests.csproj
+++ b/Source/WPF/UnitTests/UnitTests.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CostBasisTests.cs" />
+    <Compile Include="CsvTest.cs" />
     <Compile Include="DataTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlMappingTests.cs" />
