--- a/Source/Xamarin/project/Mac/packages.config
+++ b/Source/Xamarin/project/Mac/packages.config
@@ -1,19 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="SkiaSharp" version="2.88.0-preview.187" targetFramework="xamarinmac20" />
-  <package id="SkiaSharp.NativeAssets.macOS" version="2.88.0-preview.187" targetFramework="xamarinmac20" />
-  <package id="SkiaSharp.Views" version="2.88.0-preview.187" targetFramework="xamarinmac20" />
-  <package id="SkiaSharp.Views.Forms" version="2.88.0-preview.187" targetFramework="xamarinmac20" />
+  <package id="SkiaSharp" version="2.88.3" targetFramework="xamarinmac20" />
+  <package id="SkiaSharp.NativeAssets.macOS" version="2.88.3" targetFramework="xamarinmac20" />
+  <package id="SkiaSharp.Views" version="2.88.3" targetFramework="xamarinmac20" />
+  <package id="SkiaSharp.Views.Forms" version="2.88.3" targetFramework="xamarinmac20" />
   <package id="sqlite-net-pcl" version="1.8.116" targetFramework="xamarinmac20" />
-  <package id="SQLitePCLRaw.bundle_green" version="2.0.7" targetFramework="xamarinmac20" />
-  <package id="SQLitePCLRaw.core" version="2.0.7" targetFramework="xamarinmac20" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.7" targetFramework="xamarinmac20" />
+  <package id="SQLitePCLRaw.bundle_green" version="2.1.3" targetFramework="xamarinmac20" />
+  <package id="SQLitePCLRaw.core" version="2.1.3" targetFramework="xamarinmac20" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.1.3" targetFramework="xamarinmac20" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.14" targetFramework="xamarinmac20" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3" version="2.0.7" targetFramework="xamarinmac20" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3" version="2.1.3" targetFramework="xamarinmac20" />
   <package id="System.Buffers" version="4.5.1" targetFramework="xamarinmac20" />
-  <package id="System.Memory" version="4.5.4" targetFramework="xamarinmac20" />
+  <package id="System.Memory" version="4.5.5" targetFramework="xamarinmac20" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="xamarinmac20" />
-  <package id="Xamarin.Essentials" version="1.7.1" targetFramework="xamarinmac20" />
-  <package id="Xamarin.Forms" version="5.0.0.2337" targetFramework="xamarinmac20" />
+  <package id="Xamarin.Essentials" version="1.7.4" targetFramework="xamarinmac20" />
+  <package id="Xamarin.Forms" version="5.0.0.2545" targetFramework="xamarinmac20" />
 </packages>
