--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -75,6 +75,10 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
       
+      # Add vstest.console.exe
+    - name: Setup VSTest Path
+      uses: darenm/Setup-VSTest@v1.2
+
     # - name: Install Windows SDK 10.0.18362
     #   uses: fbactions/setup-winsdk@v1
     #   with:
@@ -99,7 +103,7 @@ jobs:
         
     # Test the application.
     - name: Run unit tests
-      run: vstest.console.exe Source\WPF\UnitTests\bin\$env:Configuration\net7.0-windows\UnitTests.dll /Platform:x64
+      run: vstest.console /Platform:x64 Source\WPF\UnitTests\bin\$env:Configuration\net7.0-windows\UnitTests.dll
       env:
         Configuration: ${{ matrix.configuration }}
         Platform: ${{ matrix.platform }}
