--- a/Source/WPF/OfxTestServer/OfxTestServer.csproj
+++ b/Source/WPF/OfxTestServer/OfxTestServer.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <UseWPF>true</UseWPF>
     <RootNamespace>OfxTestServer</RootNamespace>
   </PropertyGroup>
