--- a/Source/WPF/WinGetTemplate/LovettSoftware.MyMoney.Net.locale.en-US.yaml
+++ b/Source/WPF/WinGetTemplate/LovettSoftware.MyMoney.Net.locale.en-US.yaml
@@ -1,24 +1,17 @@
-# Created using YamlCreate.ps1
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultlocale.1.0.0.schema.json
+# Created using wingetcreate 1.10.3.0
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: LovettSoftware.MyMoney.Net
-PackageVersion: 1.1.0.71
+PackageVersion: 2.1.0.62
 PackageLocale: en-US
 Publisher: Chris Lovett
-PublisherUrl: https://github.com/clovett/MyMoney.Net
-PublisherSupportUrl: https://github.com/clovett/MyMoney.Net/issues
-PrivacyUrl: https://github.com/clovett/MyMoney.Net/
 Author: Chris Lovett
 PackageName: MyMoney.Net
 PackageUrl: https://github.com/clovett/MyMoney.Net/wiki
-License: MIT License
-Copyright: Copyright (c) 2021 Chris Lovett
-CopyrightUrl: https://github.com/clovett/MyMoney.Net/
+License: MIT
 ShortDescription: LovettSoftware.MyMoney.Net
 Description: MyMoney is a rich client .NET application for managing your personal finances. It is written entirely in C# and is designed for programmers who want easy access to their data and who want to quickly and easily add their own features. Your data will not be locked up in some proprietary format, it is yours to do with as you like.
-Moniker: MyMoney.Net
 Tags:
-- money
-- financial
+- finance
 ManifestType: defaultLocale
-ManifestVersion: 1.0.0
+ManifestVersion: 1.10.0
